--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
+    "react-intersection-observer": "^9.10.3",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "sass": "^1.77.6"
